k8s/apps/gitea/envs/local-kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-gitea-path
  namespace: gitea
spec:
  ingressClassName: nginx
  rules:
    - host: cnoe.localtest.me
