k8s/apps/gitea/envs/local-kind/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-gitea-path
spec:
  ingressClassName: nginx
  rules:
    - host: cnoe.localtest.me
      http:
        paths:
          - backend:
              service:
                name: my-gitea-http
                port:
                  number: 3000
            path: /gitea(/|$)(.*)
            pathType: ImplementationSpecific
